# BigData

./: .env  .gitignore  README.md  pyproject.toml
code/: countries_enrich3.py
code/data/output/: missing_countries_report.md
code/exec/: countries_enrich_hapiness.py  countries_enrich_unesco.py  countries_enrich_world_data.py  data_analysis.py  dimensionality_reduction.py  isomap_reduction.py  lle_reduction.py  mds_reduction.py  merge.py  normalization.py  reduction_comparision.py  som_reduction.py  tsne_reduction.py
code/utils/: country_processor.py  currency_normalizer.py  data_analysis_report.py  data_loader.py  filter_normalizer.py  mds_report.py  metrics_normalizer.py  normalization_report.py  output_handler.py  reduction_comparison_report.py  text_normalizer.py  tsne_report.py
data/input/: exchage_rates.json
data/output/: Theoretical_Part2_Explanation.md  analyzed_countries.csv  country_analysis_report.md  dim_reduction_comparison.json  dimensionality_reduction_comparison.md  enriched_countries.json  enriched_countries_final.json  enriched_countries_happiness.json  lle_standard_metrics.json  mds_results.csv  missing_countries_report.md  missing_happiness_report.md  missing_unesco_report.md  normalized_countries.json  tsne_analysis_report.md  tsne_metrics.json  tsne_results.csv
data/output/enrichement/: enriched_countries_final.json  enriched_countries_unesco.json  missing_unesco_report.md
data/output/normalization/: countries_normalized_report.md
data/output/reduction/: mds_analysis_report.md  mds_metrics.json  tsne_analysis_report.md
